packages/build/tests/error/fixtures/plugin_exit/plugin.js
module.exports = {
  async onPreBuild() {
    process.exit(1)
  },
  onBuild() {
    console.log('test')
  },
}
